tests/compile/non_send.stderr
error[E0277]: `Rc<Cell<i32>>` cannot be sent between threads safely
  --> tests/compile/non_send.rs:11:25
   |
11 |       lua.create_function(move |_, ()| {
   |           --------------- ^-----------
   |           |               |
   |  _________|_______________within this `{closure@$DIR/tests/compile/non_send.rs:11:25: 11:37}`
   | |         |
   | |         required by a bound introduced by this call
12 | |         Ok(data.get())
13 | |     })?
   | |_____^ `Rc<Cell<i32>>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile/non_send.rs:11:25: 11:37}`, the trait `Send` is not implemented for `Rc<Cell<i32>>`
note: required because it's used within this closure
  --> tests/compile/non_send.rs:11:25
   |
11 |     lua.create_function(move |_, ()| {
   |                         ^^^^^^^^^^^^
   = note: required for `{closure@$DIR/tests/compile/non_send.rs:11:25: 11:37}` to implement `mlua::types::MaybeSend`
note: required by a bound in `Lua::create_function`
  --> src/lua.rs
   |
   |     pub fn create_function<'lua, A, R, F>(&'lua self, func: F) -> Result<Function<'lua>>
   |            --------------- required by a bound in this associated function
...
   |         F: Fn(&'lua Lua, A) -> Result<R> + MaybeSend + 'static,
   |                                            ^^^^^^^^^ required by this bound in `Lua::create_function`
